--- a/css/base.css
+++ b/css/base.css
@@ -38,7 +38,7 @@
     border: none;
     text-decoration: none;
     list-style: none;
-    transition: all .2s ease-out;
+    transition: all .5s ease-out;
     scroll-behavior: smooth;
     -webkit-tap-highlight-color: transparent;
     /* cursor: none; */
@@ -242,6 +242,7 @@ section {
     text-decoration: overline;
     text-decoration-color: var(--blue5);
     text-decoration-thickness: 6px;
+    font-family: 'Garamond', sans-serif;
 }
 
 
