--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -26,7 +26,7 @@ header {
     backdrop-filter: blur(5px);
     background-color: var(--shade-l);
     box-shadow: 0px 2px 10px var(--shade-d);
-    z-index: 90;
+    z-index: 50;
 }
 
 .nav {
@@ -509,30 +509,135 @@ ________________________________________________________________________________
     padding-top: 10vh;
 }
 
-#laptop-mockup {
+.laptop-bg {
     grid-column: 1/7;
-    grid-row: 2/11;
-    margin-top: 2vh;
-    height: 98%;
+    grid-row: 2/10;
+    margin-top: 10vh;
+    height: 110%;
+    width: 80%;
+    /* border: 2px solid green; */
+}
+
+.laptop-wrapper {
+    height: 100%;
     width: 100%;
-    background: url(../images/laptop-mockup.webp) no-repeat center center;
-    background-size: contain;
-    mix-blend-mode: darken;
-    border: 3px solid red;
+    border-top: 15px solid;
+    border-bottom: 61px solid;
+    border-left: 80px solid;
+    border-right: 80px solid;
+    border-image-source: url(../images/laptop-mockup.webp);
+    border-image-slice: 21 107 61 98 fill;
+    /* border-image-repeat: round; */
+    background: url(../images/project-wp.webp) no-repeat center center;
+    background-size: 100% 100%;
+    overflow: hidden;
+    position: relative;
 }
 
-#laptop-container {
-    grid-column: 1/7;
-    grid-row: 2/11;
-    margin-top: -5vh;
-    margin-left: -.5vw;
-    height: 67vh;
-    width: 612px;
-    border: 3px solid rgb(255, 208, 0);
-    z-index: 400;
-    /* background-color: blue; */
+.project-screen {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    /* top: 50%;
+    transform: translate(-50%, -50%); */
+    transform: translate(-50%, 50%) scale(0.1);
+    height: 100%;
+    width: 100%;
+    background-size: 100% 100% !important;
+    background-position: center center !important;
+    background-repeat: no-repeat !important;
+    border: 1px solid var(--shade-l);
+    border-radius: 2px;
+    opacity: 0;
+    overflow-y: scroll;
 }
 
+/* .project-screen::-webkit-scrollbar {
+    width: 0.5rem;
+} */
+
+#project-screen-1 {
+    background-color: white;
+}
+
+#project-screen-2 {
+    background-color: greenyellow;
+}
+
+#project-screen-3 {
+    background-color: red;
+}
+
+#project-screen-4 {
+    background-color: orchid;
+}
+
+.icon-after-click {
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%) scale(1);
+    opacity: 1;
+    transition: all .5s ease-in-out;
+}
+
+#app-tray {
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, 0);
+    height: 12%;
+    width: 75%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2vw;
+    backdrop-filter: blur(60px);
+    border-radius: 12px;
+    border: 2px solid var(--glass-border);
+    box-shadow: 0px 2px 5px var(--shade-vd);
+    z-index: 10;
+}
+
+.laptop-icons {
+    height: 35px;
+    width: 35px;
+    border-radius: 50%;
+    cursor: pointer;
+    background-repeat: no-repeat !important;
+    background-position: center center !important;
+    background-size: cover !important;
+    /* position: relative; */
+}
+
+#project-1 {
+    background: url(../images/icons/p1.webp);
+
+}
+
+#project-2 {
+    background: url(../images/icons/p2.webp);
+}
+
+#project-3 {
+    background: url(../images/icons/p3.webp);
+}
+
+#project-4 {
+    background: url(../images/icons/p4.webp);
+}
+
+.minimized {
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translate(-50%, -65%);
+    height: 12vh;
+    width: 8vw;
+    border-radius: 8px;
+    background-color: aliceblue;
+    border: 2px solid var(--glass-border);
+    box-shadow: 0px 2px 5px var(--shade-vd);
+}
 
 
 
@@ -555,7 +660,7 @@ ________________________________________________________________________________
 #experience-wrapper {
     grid-column: 1/7;
     grid-row: 2/6;
-    margin-top: 5vh;
+    margin-top: 2vh;
     position: relative;
     /* border: 2px solid black; */
 }
@@ -577,19 +682,23 @@ ________________________________________________________________________________
 
 #left-scroll {
     position: absolute;
-    top: 80%;
+    top: 75%;
     left: 0;
     transform: translate(-50%, -50%);
-    box-shadow: -1px 1px 5px black;
+    box-shadow: -1px 1px 5px var(--shade-d);
+    color: var(--blue6);
+    z-index: 45;
 }
 
 #right-scroll {
     /* display: none; */
     position: absolute;
-    top: 80%;
+    top: 75%;
     right: 0;
     transform: translate(50%, -50%);
-    box-shadow: 1px 1px 5px black;
+    box-shadow: 1px 1px 5px var(--shade-d);
+    color: var(--blue6);
+    z-index: 45;
 }
 
 .experience-slide {
@@ -606,38 +715,74 @@ ________________________________________________________________________________
     filter: grayscale(0) !important;
 }
 
+.previous-experience-description-on-click {
+    transform: translate(-50%, 0) !important;
+    opacity: 0 !important;
+}
+
+.current-experience-description-on-click {
+    transform: translate(-50%, 100%) !important;
+    opacity: 1 !important;
+}
+
 #experience-timeline {
     position: absolute;
-    top: 80%;
+    top: 75%;
     right: 0;
     width: calc(100% + 100% /3);
     height: 6px;
-    background-color: var(--blue5);
+    /* background-color: var(--blue5); */
+    background: linear-gradient(to left, var(--blue6), var(--blue5), var(--blue3));
 }
 
 .experience-time-dot {
     position: absolute;
-    top: 80%;
+    top: 75%;
     left: 50%;
     transform: translate(-50%, -31%);
     border-radius: 50%;
     height: 20px;
     width: 20px;
     background-color: var(--blue6);
+    z-index: 45;
+}
+
+.experience-time-dot::after {
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 50%;
+    height: 10px;
+    width: 10px;
+    background-color: var(--blue5);
     z-index: 50;
+}
+
+.experience-time {
+    position: absolute;
+    top: 75%;
+    left: 50%;
+    transform: translate(-50%, -175%);
+    font-size: 12px;
+    font-style: italic;
+    font-weight: bold;
+    color: var(--shade-vd);
+    letter-spacing: 1px;
+
 }
 
 .company-img {
     width: 100%;
     height: 55%;
     display: flex;
-    background-color: transparent !important;
+    /* background-color: transparent !important; */
     background-repeat: no-repeat !important;
     background-position: center center !important;
     mix-blend-mode: darken;
-    filter: grayscale(0.9);
-    border-right: 2px solid black;
-
+    filter: grayscale(1);
+    border-right: 2px solid var(--shade-d);
 }
 
 .company-img1 {
@@ -663,37 +808,130 @@ ________________________________________________________________________________
 }
 
 #experience-description {
-    grid-column: 1/7;
+    grid-column: 2/6;
     grid-row: 6/11;
-    /* margin-top: 2vh; */
-    height: 90%;
-    /* display: flex;
+    height: 95%;
+    padding: 5vh;
+    display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center; */
-    border: 2px solid green;
+    background: linear-gradient(to right, white, var(--blue1));
+    /* border: 2px solid var(--blue4); */
+    box-shadow: 2px 2px 3px var(--blue6-lo);
+    border-radius: 8px;
+    z-index: 49;
+}
+
+#experience-description::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    transform: translate(32%, -20%) rotate(0);
+    height: 20%;
+    width: 20%;
+    background: url(../images/gear.svg) no-repeat center center;
+    z-index: 49;
+    animation: rotate2 8s linear infinite;
+}
+
+@keyframes rotate2 {
+    100% {
+        transform: translate(32%, -20%) rotate(360deg);
+    }
 }
 
 #company-name-wrapper {
     position: relative;
-    height: 6vh;
+    height: 7vh;
+    width: 100%;
     overflow: hidden;
-    margin-top: 2vh;
+    /* border: 2px solid greenyellow; */
 }
 
 .company-name {
     position: absolute;
     top: -100%;
-    left:50%;
+    left: 50%;
     transform: translate(-50%, 0);
+    font-family: garamond, sans-serif;
     font-size: 26px;
     font-weight: bold;
     min-height: 100%;
+    width: 100%;
     letter-spacing: 1px;
     color: var(--blue6);
     text-align: center;
 }
 
+#experience-description hr {
+    width: 100%;
+    height: .5px;
+    background: var(--blue4);
+    margin-bottom: 1vh;
+
+}
+
+#company-jobtype-wrapper {
+    position: relative;
+    height: 4vh;
+    width: 100%;
+    overflow: hidden;
+    /* border: 2px solid greenyellow; */
+}
+
+.company-jobtype {
+    position: absolute;
+    top: -100%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    font-size: 14px;
+    font-style: italic;
+    color: var(--shade-vd);
+    min-height: 100%;
+    width: 100%;
+    letter-spacing: 1px;
+    text-align: center;
+}
+
+.company-jobtype u {
+    font-weight: bold;
+}
+
+#company-jobdetails-wrapper {
+    position: relative;
+    height: calc(100% - 14vh);
+    width: 100%;
+    overflow: hidden;
+    margin-top: 2vh;
+    background: var(--glass-bg) url(../images/noise.svg);
+    backdrop-filter: blur(10px);
+    border: 2px solid var(--glass-border);
+    border-radius: 8px;
+    z-index: 50;
+}
+
+.company-jobdetails {
+    position: absolute;
+    top: -100%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    min-height: 100%;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    font-size: 15px;
+    line-height: 30px;
+    letter-spacing: 0.8px;
+    color: var(--shade-t);
+    text-align: justify;
+    hyphens: auto;
+    -webkit-hyphens: auto;
+    word-spacing: -1.8px;
+    padding: 0 4vw 0 4vw;
+}
 
 
 /*
