--- a/css/base.css
+++ b/css/base.css
@@ -46,13 +46,15 @@
 }
 
 ::selection {
-    color: blue;
+    background-color: orange;
+    color: white;
 }
 
 html {
     /* font-size: 62.5%; */
     overflow-x: hidden;
     scroll-snap-type: y mandatory;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='80' height='80' viewBox='0 0 80 80'%3E%3Cg fill='%23e0f4fc' fill-opacity='0.4'%3E%3Cpath fill-rule='evenodd' d='M11 0l5 20H6l5-20zm42 31a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM0 72h40v4H0v-4zm0-8h31v4H0v-4zm20-16h20v4H20v-4zM0 56h40v4H0v-4zm63-25a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM53 41a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-30 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm-28-8a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zM56 5a5 5 0 0 0-10 0h10zm10 0a5 5 0 0 1-10 0h10zm-3 46a3 3 0 1 0 0-6 3 3 0 0 0 0 6zm10 0a3 3 0 1 0 0-6 3 3 0 0 0 0 6zM21 0l5 20H16l5-20zm43 64v-4h-4v4h-4v4h4v4h4v-4h4v-4h-4zM36 13h4v4h-4v-4zm4 4h4v4h-4v-4zm-4 4h4v4h-4v-4zm8-8h4v4h-4v-4z'/%3E%3C/g%3E%3C/svg%3E");
     /* -webkit-font-smoothing: antialiased; */
 }
 
@@ -89,13 +91,13 @@ body::-webkit-scrollbar-thumb:hover {
     transition: transform 0.5s ease-out;
 }
 
-#text-wrapper {
+#text-container {
     height: 30px;
     width: 40vw;
     position: relative;
 }
 
-#preloader-text {
+.preloader-text {
     position: absolute;
     text-align: center;
     height: 100%;
@@ -177,7 +179,7 @@ body::-webkit-scrollbar-thumb:hover {
     -webkit-mask-composite: destination-out;
     mask-composite: exclude;
     background:
-        linear-gradient(var(--d, 0deg), var(--c2) 50%, black 0) bottom /100% 205%,
+        linear-gradient(var(--d, 0deg), var(--c2) 50%, white 0) bottom /100% 205%,
         linear-gradient(var(--c2) 0 0) center/0 100%;
     background-repeat: no-repeat;
     animation: inherit;
@@ -253,16 +255,12 @@ ________________________________________________________________________________
 
 
 
-#contact {
-    display: grid;
-    grid-template-columns: repeat(6, 1fr);
-    grid-template-rows: repeat(2, 1fr);
-    margin-top: 15vh;
-}
-
-#contact iframe {
-    grid-column: 1/7;
-    grid-row: 1/3;
+input:-webkit-autofill,
+input:-webkit-autofill:hover,
+input:-webkit-autofill:focus,
+input:-webkit-autofill:active {
+    transition: background-color 5000s ease-in-out 0s;
+    -webkit-text-fill-color: var(--shade-t) !important;
 }
 
 
@@ -329,26 +327,25 @@ ________________________________________________________________________________
     width: 100vw;
     height: 110vh;
     background-color: var(--shade-vd);
-    z-index: 94;
-    display: none;
+    z-index: 89;
+    opacity: 0;
+    visibility: hidden;
+    transition: all 0.2s ease-out;
+}
+
+.dialog-bg-visible {
+    opacity: 1 !important;
+    visibility: visible !important;
 }
 
 .round-button {
     height: 45px;
     width: 45px;
+    cursor: pointer;
+    font-size: 40px;
+    z-index: 101;
+    border-radius: 50%;
     display: grid;
     place-content: center;
-    font-size: 40px;
-    background-color: var(--shade-l);
-    border-radius: 50%;
-    cursor: pointer;
-    z-index: 101;
-}
-
-.dialog-close {
-    position: absolute;
-    bottom: 2%;
-    left: 50%;
-    transform: translate(-50%, 0);
-    box-shadow: 1px 1px 5px black;
+    background-color: transparent;
 }
