--- a/css/style-desktop.css
+++ b/css/style-desktop.css
@@ -9,6 +9,33 @@
     pointer-events: none;
     z-index: 200;
 } */
+.x-button {
+    background-color: var(--shade-l);
+    position: absolute;
+    bottom: 2%;
+    left: 50%;
+    transform: translate(-50%, 0);
+    box-shadow: 1px 1px 5px black;
+}
+
+.x-button-corner {
+    background-color: transparent;
+    position: absolute;
+    top: 1.5vh;
+    right: 2%;
+    bottom: auto;
+    left: auto;
+    transform: translate(0, 0);
+    box-shadow: none;
+}
+
+.preloader-text-desktop {
+    display: block;
+}
+
+.preloader-text-mobile {
+    display: none;
+}
 
 
 
@@ -124,7 +151,6 @@ ________________________________________________________________________________
     left: 50%;
     transform: translate(73%, 0%);
     background: linear-gradient(135deg, white -65%, var(--blue3) 85%);
-    /* z-index: -1; */
 }
 
 .circle2 {
@@ -136,7 +162,6 @@ ________________________________________________________________________________
     left: 50%;
     transform: translate(-165%, -38%);
     background: linear-gradient(80deg, var(--violet1) 0%, var(--blue2) 200%);
-    /* z-index: -1; */
 }
 
 .container {
@@ -189,8 +214,6 @@ ________________________________________________________________________________
     }
 }
 
-/* transform: translate(-50%, -50%) translateZ(-1px); */
-
 #profile-story {
     position: fixed;
     box-shadow: 1px 1px 10px black;
@@ -202,16 +225,6 @@ ________________________________________________________________________________
     min-height: 90vh;
     width: 30vw;
     z-index: 100;
-    /* transform-style: preserve-3d; */
-}
-
-#profile-story button {
-    background-color: transparent;
-    font-size: 35px;
-    cursor: pointer;
-    position: absolute;
-    top: 1.5vh;
-    right: 2vw;
 }
 
 #resume-container {
@@ -261,12 +274,6 @@ ________________________________________________________________________________
     }
 }
 
-/* @media (hover:hover) {
-    #hi2:hover {
-        animation: glitch .2s infinite;
-    }
-} */
-
 #bio {
     grid-column: 1/7;
     grid-row: 6/7;
@@ -292,23 +299,21 @@ ________________________________________________________________________________
     z-index: 40;
 }
 
-.button-on-home button {
-    padding: 16px 50px 16px 50px;
+.big-button {
     border-radius: 10px;
     width: 20vw;
-    /* height: 100%; */
+    height: 8vh;
     cursor: pointer;
     color: white;
     font-weight: bold;
-    font-size: 12px;
+    font-size: 13px;
     letter-spacing: 1px;
     background-color: var(--blue5);
-    text-shadow: .5px .5px .5px var(--shade-vd);
+    text-shadow: .1px .1px .5px var(--shade-vd);
 }
 
 @media (hover:hover) {
-
-    .button-on-home button:hover {
+    .big-button:hover {
         box-shadow: 3px 3px 2px var(--violet2);
         background-image: linear-gradient(-45deg, var(--blue3), var(--violet1), var(--blue5), var(--violet1));
         background-size: 500%;
@@ -333,12 +338,10 @@ ________________________________________________________________________________
 #icons-on-home {
     grid-column: 3/5;
     grid-row: 9/10;
-    /* margin-top: 10vh; */
     display: flex;
     column-gap: 1.5vw;
     flex-direction: row;
     justify-self: center;
-    /* border: 2px solid red; */
     z-index: 40;
 }
 
@@ -509,13 +512,16 @@ ________________________________________________________________________________
     padding-top: 10vh;
 }
 
+#project-container {
+    display: none;
+}
+
 .laptop-bg {
     grid-column: 1/7;
     grid-row: 2/10;
     margin-top: 10vh;
     height: 110%;
     width: 80%;
-    /* border: 2px solid green; */
 }
 
 .laptop-wrapper {
@@ -538,11 +544,10 @@ ________________________________________________________________________________
     position: absolute;
     bottom: 0;
     left: 50%;
-    /* top: 50%;
-    transform: translate(-50%, -50%); */
     transform: translate(-50%, 50%) scale(0.1);
     height: 100%;
     width: 100%;
+    background-color: white;
     background-size: 100% 100% !important;
     background-position: center center !important;
     background-repeat: no-repeat !important;
@@ -552,24 +557,94 @@ ________________________________________________________________________________
     overflow-y: scroll;
 }
 
-/* .project-screen::-webkit-scrollbar {
-    width: 0.5rem;
-} */
-
-#project-screen-1 {
-    background-color: white;
+.project-screen::-webkit-scrollbar {
+    width: 0.3rem;
 }
 
-#project-screen-2 {
-    background-color: greenyellow;
+.project-screen::-webkit-scrollbar-track {
+    background: white;
 }
 
-#project-screen-3 {
+.project-screen::-webkit-scrollbar-thumb {
+    background: var(--shade-d);
+    border-radius: 5rem;
+}
+
+.project-screen::-webkit-scrollbar-thumb:hover {
+    background: var(--shade-vd);
+}
+
+.project-screen iframe {
+    position: absolute;
+    top: 8%;
+    left: 0;
+    height: 140%;
+    width: 100%;
+}
+
+.title-bar {
+    position: sticky;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 8%;
+    backdrop-filter: blur(5px);
+    background-color: var(--shade-l);
+    box-shadow: 0px 1px 5px var(--shade-d);
+    z-index: 5;
+}
+
+.icons-3 {
+    position: absolute;
+    right: 0%;
+    top: 50%;
+    transform: translateY(-50%);
+    display: flex;
+    justify-content: space-between;
+    width: 18%;
+    height: 100%;
+}
+
+.icons-3 a {
+    width: 100%;
+    height: 100%;
+}
+
+.link {
+    background-color: transparent;
+    height: 100%;
+    width: 100%;
+    background: url(../images/icons/link.svg) no-repeat center center;
+    padding: 3px;
+    cursor: pointer;
+}
+
+.reload {
+    background-color: transparent;
+    height: 100%;
+    width: 100%;
+    background: url(../images/icons/reload.svg) no-repeat center center;
+    padding: 3px;
+    cursor: pointer;
+}
+
+.link:hover,
+.reload:hover {
+    background-color: var(--glass-bg);
+}
+
+.close {
+    background-color: transparent;
+    height: 100%;
+    width: 100%;
+    font-size: 17.5px;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+.close:hover {
     background-color: red;
-}
-
-#project-screen-4 {
-    background-color: orchid;
+    color: white;
 }
 
 .icon-after-click {
@@ -606,7 +681,6 @@ ________________________________________________________________________________
     background-repeat: no-repeat !important;
     background-position: center center !important;
     background-size: cover !important;
-    /* position: relative; */
 }
 
 #project-1 {
@@ -731,7 +805,6 @@ ________________________________________________________________________________
     right: 0;
     width: calc(100% + 100% /3);
     height: 6px;
-    /* background-color: var(--blue5); */
     background: linear-gradient(to left, var(--blue6), var(--blue5), var(--blue3));
 }
 
@@ -770,14 +843,12 @@ ________________________________________________________________________________
     font-weight: bold;
     color: var(--shade-vd);
     letter-spacing: 1px;
-
 }
 
 .company-img {
     width: 100%;
     height: 55%;
     display: flex;
-    /* background-color: transparent !important; */
     background-repeat: no-repeat !important;
     background-position: center center !important;
     mix-blend-mode: darken;
@@ -804,22 +875,39 @@ ________________________________________________________________________________
 .company-img4 {
     background: url(../images/icons/ieeeggv.jpg);
     background-size: 25%;
-    /* mix-blend-mode: difference; */
 }
 
-#experience-description {
+#experience-description-wrapper {
     grid-column: 2/6;
     grid-row: 6/11;
     height: 95%;
+    position: relative;
+    z-index: 49;
+}
+
+#experience-description {
+    height: 100%;
     padding: 5vh;
+    position: relative;
     display: flex;
     flex-direction: column;
     align-items: center;
     background: linear-gradient(to right, white, var(--blue1));
-    /* border: 2px solid var(--blue4); */
-    box-shadow: 2px 2px 3px var(--blue6-lo);
     border-radius: 8px;
-    z-index: 49;
+}
+
+#experience-description::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%, -10%);
+    height: 0px;
+    width: 90%;
+    border: 25px solid transparent;
+    border-radius: 50%;
+    box-shadow: 5px 8px 45px black;
+    z-index: -1;
 }
 
 #experience-description::after {
@@ -827,17 +915,16 @@ ________________________________________________________________________________
     position: absolute;
     bottom: 0;
     left: 0;
-    transform: translate(32%, -20%) rotate(0);
-    height: 20%;
-    width: 20%;
+    transform: translate(-50%, -10%) rotate(0);
+    height: 50%;
+    width: 50%;
     background: url(../images/gear.svg) no-repeat center center;
-    z-index: 49;
     animation: rotate2 8s linear infinite;
 }
 
 @keyframes rotate2 {
     100% {
-        transform: translate(32%, -20%) rotate(360deg);
+        transform: translate(-50%, -10%) rotate(360deg);
     }
 }
 
@@ -1058,7 +1145,6 @@ ________________________________________________________________________________
 
 .slide3 {
     text-align: center;
-    /* font-size: 18px; */
     background: -webkit-linear-gradient(to left, var(--blue1), white);
     background: linear-gradient(to left, var(--blue1), white);
     display: flex;
@@ -1071,8 +1157,7 @@ ________________________________________________________________________________
     font-size: 26px;
     letter-spacing: 2px;
     text-align: center;
-    margin-top: 4.5vh;
-    margin-bottom: 4.5vh;
+    margin: 4.5vh 0 4.5vh 0;
     color: var(--blue6);
 }
 
@@ -1191,11 +1276,257 @@ ________________________________________________________________________________
 
 
 #contact {
-    height: 190vh;
-    padding: 0px 15vh 0 15vh;
-    scroll-margin-top: 7vh;
-    scroll-margin-bottom: 20vh;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+    grid-template-rows: repeat(10, 1fr);
+    height: 100vh;
+    margin-top: 5vh;
+    padding-top: 10vh;
 }
+
+#why-hire-me {
+    grid-column: 1/4;
+    grid-row: 2/11;
+    padding: 5vh 5vh 5vh 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 6vh;
+    /* border: 2px solid red; */
+}
+
+#short-info {
+    /* border: 2px solid pink; */
+    height: 20vh;
+    width: 100%;
+    font-size: 15px;
+    line-height: 30px;
+    letter-spacing: 0.8px;
+    color: var(--shade-t);
+    text-align: justify;
+    hyphens: auto;
+    -webkit-hyphens: auto;
+    word-spacing: -1.8px;
+    border-radius: 8px;
+}
+
+#github-details {
+    height: 15vh;
+    width: 100%;
+    /* border: 2px solid green; */
+    display: flex;
+    position: relative;
+}
+
+#github-details::after {
+    content: "*data above is requested from the Github API";
+    position: absolute;
+    bottom: -30%;
+    left: 0;
+    width: 100%;
+    color: var(--shade-d);
+    font-size: 12px;
+    font-style: italic;
+}
+
+.github-data {
+    border-right: 3px solid var(--shade-d);
+    height: 100%;
+    width: 100%;
+    font-size: 50px;
+    color: black;
+    -webkit-text-fill-color: transparent;
+    -webkit-text-stroke-width: 1px;
+    display: flex;
+    justify-content: center;
+}
+
+.github-data:last-child {
+    border: 0;
+}
+
+#github-commits,
+#github-followers,
+#github-repos {
+    position: relative;
+}
+
+#github-commits::after {
+    content: "Commits made on Github*";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    min-width: 100%;
+    transform: translate(0, -50%);
+    text-align: center;
+    -webkit-text-fill-color: var(--shade-t);
+    -webkit-text-stroke-width: 0px;
+    font-size: 13px;
+    color: var(--shade-t);
+    /* border: 1px solid pink; */
+}
+
+#github-followers::after {
+    content: "Total Followers on Github*";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    min-width: 100%;
+    transform: translate(0, -50%);
+    text-align: center;
+    -webkit-text-fill-color: var(--shade-t);
+    -webkit-text-stroke-width: 0px;
+    font-size: 13px;
+    color: var(--shade-t);
+    /* border: 1px solid pink; */
+}
+
+#github-repos::after {
+    content: "Public Repos on Github*";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    min-width: 100%;
+    transform: translate(0, -50%);
+    text-align: center;
+    -webkit-text-fill-color: var(--shade-t);
+    -webkit-text-stroke-width: 0px;
+    font-size: 13px;
+    color: var(--shade-t);
+    /* border: 1px solid pink; */
+}
+
+#short-info2 {
+    height: 10vh;
+    width: 100%;
+    /* border: 2px solid pink; */
+    font-size: 22px;
+    font-weight: bold;
+    line-height: 30px;
+    letter-spacing: 0.8px;
+    color: var(--shade-d);
+    text-align: justify;
+    hyphens: auto;
+    -webkit-hyphens: auto;
+    word-spacing: -1.8px;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-end;
+}
+
+#contact-form {
+    grid-column: 4/7;
+    grid-row: 2/11;
+    padding: 5vh 0 5vh 5vh;
+    /* border: 1px solid pink; */
+}
+
+form {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-start;
+    gap: 6vh;
+}
+
+form div {
+    outline: 1px solid var(--shade-d);
+    width: 100%;
+    background-color: white;
+    border-radius: 8px;
+    position: relative;
+}
+
+#name-wrapper,
+#email-wrapper {
+    height: 8vh;
+    transition: all 0.1s linear;
+}
+
+#msg-wrapper {
+    height: 29vh;
+    transition: all 0.1s linear;
+}
+
+.input-field {
+    padding: 15px;
+    font-size: 15px;
+    color: var(--shade-t);
+    letter-spacing: 1px;
+    word-spacing: -1.8px;
+    border-radius: 8px;
+    background-color: transparent;
+}
+
+input[name="name"],
+input[name="email"] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: 6;
+}
+
+#msg-field {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    line-height: 30px;
+    text-align: justify;
+    hyphens: auto;
+    -webkit-hyphens: auto;
+    overflow: auto;
+    resize: none;
+    z-index: 6;
+}
+
+
+label[for="name"],
+label[for="email"] {
+    font-size: 15px;
+    color: var(--shade-t);
+    letter-spacing: 1px;
+    word-spacing: -1.8px;
+    position: absolute;
+    top: 50%;
+    left: 3%;
+    transform: translate(0, -50%);
+    z-index: 5;
+    transition: all 0.1s linear;
+}
+
+label[for="msg"] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    font-size: 15px;
+    color: var(--shade-t);
+    letter-spacing: 1px;
+    word-spacing: -1.8px;
+    position: absolute;
+    top: 13%;
+    left: 3%;
+    transition: all 0.1s linear;
+    z-index: 5;
+}
+
+.label-focus {
+    transform: translate(0, -190%) scale(0.9) !important;
+    background-color: white !important;
+    /* color: var(--blue4); */
+    padding: 0 5px 0 5px !important;
+}
+
+.label-focus-color {
+    color: var(--blue4) !important;
+}
+
 
 
 
@@ -1206,13 +1537,130 @@ ________________________________________________________________________________
 
 
 footer {
-    height: 20vh;
-    background-color: var(--blue6);
+    height: 80vh;
+    width: 100%;
+    background: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1440 320'%3E%3Cpath fill='%230099ff' fill-opacity='1' d='M0,128L80,138.7C160,149,320,171,480,154.7C640,139,800,85,960,58.7C1120,32,1280,32,1360,32L1440,32L1440,320L1360,320C1280,320,1120,320,960,320C800,320,640,320,480,320C320,320,160,320,80,320L0,320Z'/%3E%3C/svg%3E") no-repeat center center / cover;
+    padding: 0 7vw 0 7vw;
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    gap: 5vw;
 }
 
-footer p {
+.footer-section {
+    height: 70%;
+    width: 100%;
+    /* border: 2px solid red; */
+    display: flex;
+    flex-direction: column;
+    position: relative;
+}
+
+.footer-section-heading {
+    font-size: 26px;
+    font-weight: bold;
     color: white;
-    text-align: center;
-    padding: 10px;
+    margin-bottom: 2vh;
+    position: relative;
+}
+
+.footer-section-heading::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: .5px;
+    background-color: var(--blue2);
+}
+
+#footer-section1 {
+    justify-content: center;
+}
+
+#footer-section2 {
+    justify-content: center;
+}
+
+.footer-section-child {
+    /* border: 2px solid silver; */
+    display: flex;
+    gap: 5px;
+    align-items: center;
+    height: 5vh;
+    width: 100%;
+    color: white;
     font-size: 15px;
+    letter-spacing: 0.8px;
+    word-spacing: -1.8px;
+    line-height: 30px;
+}
+
+#footer-section-child-icons {
+    height: auto;
+    padding-top: 2vh;
+    gap: 1vw;
+    font-size: 20px;
+}
+
+#footer-section-child-icons a {
+    color: white;
+}
+
+#footer-section-child-icons a:hover {
+    color: var(--blue6);
+}
+
+#footer-section-text {
+    padding-top: 2vh;
+    height: auto;
+}
+
+.quick-links,
+.contact-links {
+    width: 100%;
+    height: 100%;
+    color: white;
+    font-size: 15px;
+    letter-spacing: 0.8px;
+    word-spacing: -1.8px;
+    display: flex;
+    align-items: center;
+    /* border: 2px solid red; */
+}
+
+.quick-links:hover,
+.contact-links:hover {
+    transform: translateX(2%);
+    font-weight: bold;
+    color: var(--blue6);
+}
+
+
+footer hr {
+    position: absolute;
+    left: 50%;
+    bottom: 5vh;
+    transform: translate(-50%, 0);
+    width: 85%;
+    height: .5px;
+    background-color: var(--blue2);
+}
+
+footer>p {
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    height: 5vh;
+    width: 100%;
+    display: grid;
+    place-items: center;
+    color: white;
+    font-weight: bold;
+    font-size: 13px;
+    text-align: center;
+    text-transform: uppercase;
+    text-shadow: .1px .1px .5px var(--shade-vd);
+    /* border: 2px solid red; */
 }
